--- a/Concretos/Views/Measure/Management.cshtml
+++ b/Concretos/Views/Measure/Management.cshtml
@@ -142,7 +142,7 @@
 
         @if (Model.Id > 0)
         {
-            <button type="button" id="btn-experimental-data" class="btn small-btn btn-primary me-md-2" onclick="modalExperimentalData()">
+            <button type="button" class="btn small-btn btn-primary me-md-2" onclick="modalExperimentalData()">
                 <i class="fas fa-vial"></i>
                 @labels["experimentalDataButton"]
             </button>
@@ -162,7 +162,7 @@
         }
 
     </div>
-    
+
     <div class="modal" id="modal-experimental-data" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
@@ -209,7 +209,10 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">@labels["saveButton"]</button>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-save"></i>
+                        @labels["saveButton"]
+                    </button>
                 </div>
 
             </div>
