--- a/Concretos/Views/User/Index.cshtml
+++ b/Concretos/Views/User/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<User>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Listado de usuarios";
 
     IDictionary<string, string> labels = new Dictionary<string, string>()
             {
@@ -13,7 +13,7 @@
 
     <div class="row pt-4">
         <div class="col-6">
-            <h2 class="text-primary">Lista de Usuarios</h2>
+            <h2 class="text-primary">@ViewData["Title"]</h2>
         </div>
         <div class="col-6 text-end">
             <a asp-controller="User" asp-action="Create" class="btn btn-primary">
@@ -22,6 +22,7 @@
             </a>
         </div>
     </div>
+
     <br /><br />
 
     <table class="table table-bordered table-striped" style="width:100%">
@@ -36,7 +37,7 @@
             @foreach (var obj in Model)
             {
                 <tr>
-                    <td width="50%">
+                    <td width="80%">
                         @obj.Email
                     </td>
                 </tr>
